@@ -73,16 +73,6 @@ variacions de cada arquitectura conegudes com <quote>sabors</quote>.
 </row>
 
 <row>
-  <entry morerows="1">HP PA-RISC</entry>
-  <entry morerows="1">hppa</entry>
-  <entry>PA-RISC 1.1</entry>
-  <entry>32</entry>
-</row><row>
-  <entry>PA-RISC 2.0</entry>
-  <entry>64</entry>
-</row>
-
-<row>
   <entry>Intel IA-64</entry>
   <entry>ia64</entry>
   <entry></entry>
