@@ -122,16 +122,6 @@ Debia GNU/Linux &release;-ek hamaika arkitektura nagusi eta arkitektura
 </row>
 
 <row>
-  <entry morerows="1">HP PA-RISC</entry>
-  <entry morerows="1">hppa</entry>
-  <entry>PA-RISC 1.1</entry>
-  <entry>32</entry>
-</row><row>
-  <entry>PA-RISC 2.0</entry>
-  <entry>64</entry>
-</row>
-
-<row>
   <entry>Intel ia64-based</entry>
   <entry>ia64</entry>
   <entry></entry>
