@@ -110,16 +110,6 @@ di ogni architettura, che vanno sotto il nome di <quote>flavor</quote>.
 </row>
 
 <row>
-  <entry morerows="1">HP PA-RISC</entry>
-  <entry morerows="1">hppa</entry>
-  <entry>PA-RISC 1.1</entry>
-  <entry>32</entry>
-</row><row>
-  <entry>PA-RISC 2.0</entry>
-  <entry>64</entry>
-</row>
-
-<row>
   <entry>Intel IA-64</entry>
   <entry>ia64</entry>
   <entry></entry>
