@@ -39,6 +39,7 @@ installation-guide (2011xxxx) UNRELEASED; urgency=low
     install size in chroot method.
   * Advise to install ssh and set root passwd in chroot method, thanks Michael
     Stapelberg for the patch. Closes: #413649.
+  * Remove PA-RISC architecture from documented supported list.
 
   [ Steve McIntyre ]
   * Make it clearer how we expect users to write CDs to USB sticks.
